[tool.poetry]
name = "clam"
version = "3.0.0"
description = "My personal Discord bot."
authors = ["Fyssion <fyssioncodes@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = {git = "https://github.com/Rapptz/discord.py", rev = "master", extras = ["voice", "speed"]}
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
discord-flags = {git = "https://github.com/AnotherTwinkle/Flag-Parsing"}
PyYAML = "^6.0"
jishaku = "^2.3.2"
psutil = "^5.9.0"
youtube_dl = "^2021.12.17"
Pillow = "^9.0.1"
asyncpg = "^0.25.0"
click = "^8.0.3"
dateparser = "^1.1.0"
parsedatetime = "^2.6"
pytz = "^2021.3"
beautifulsoup4 = "^4.9.3"
async-cse = "^0.3.0"
GitPython = "^3.1.25"
lru-dict = "^1.1.7"
"cleverbot.py" = {extras = ["async"], version = "^2.5.0"}
wolframalpha = "^5.0.0"
pymediawiki = "^0.7.1"
python-dateutil = "^2.8.2"
rich = "^10.16.2"
lxml = "^4.7.1"
humanize = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
